# puffy

./: .gitignore  Containerfile  README.md  build.sh  build_container_run.sh  create_test_image.py  main.py  pyproject.toml  run.sh
puffy/: __init__.py  config.py  dependencies.py  handlers.py
puffy/config/: jinja.py
puffy/core/: __init__.py  adjustments.py  editor.py  effects.py  filters.py  io.py  transform.py  types.py
puffy/core/vector/: editor.py
puffy/routers/: image.py  ui.py  vector.py
puffy/static/js/: vector.js
puffy/templates/: base.html  editor.html  error.html  index.html  vector_editor.html
puffy/templates/partials/: canvas.html
tests/: test_core.py  test_routers.py
