[project]
name = "puffy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a26",
    "jedi-language-server>=0.46.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.3",
]
