[project]
name = "puffy"
version = "0.1.0"
description = "A web-based image editor."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.3",
    "jinja2>=3.1.6",
    "numpy>=2.0,<2.3",
    "uvicorn>=0.30.3",
    "python-multipart==0.0.20",
    "opencv-python-headless==4.12.0.88",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a26",
    "jedi-language-server>=0.46.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.3",
]

[tool.setuptools.packages.find]
include = ["puffy*"]
