[project]
name = "puffy"
version = "0.1.0"
description = "A web-based image editor."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.3",
    "jinja2>=3.1.6",
    "numpy>=2.0,<2.3",
    "uvicorn>=0.30.3",
    "python-multipart==0.0.20",
    "opencv-python-headless==4.12.0.88",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a26",
    "jedi-language-server>=0.46.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.3",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["puffy*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# a default set of rules, with some logical exclusions
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
# default mypy settings, may need to be modified
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
]
ignore_missing_imports = true
